--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -30,3 +30,7 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_HOUSE_INSPECTION_WEB }}
           projectId: house-inspection-web
           channelId: live
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DIRECT_URL: ${{ secrets.DIRECT_URL }}
