--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "@supabase/supabase-js": "^2.46.1",
+    "jotai": "^2.10.1",
     "ky": "^1.2.4",
     "leaflet": "^1.9.4",
     "next": "14.2.3",
