--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.46.1",
     "jotai": "^2.10.1",
     "js-md5": "^0.8.3",
+    "jsonwebtoken": "^9.0.2",
     "ky": "^1.2.4",
     "leaflet": "^1.9.4",
     "next": "14.2.3",
@@ -23,6 +24,7 @@
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
