--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@supabase/supabase-js": "^2.46.1",
+    "csv-parse": "^5.6.0",
     "jotai": "^2.10.1",
     "js-md5": "^0.8.3",
     "jsonwebtoken": "^9.0.2",
